vacation timeline working
