# backend/src/domain/entities/employee.js
@@ -3,12 +3,6 @@ const mongoose = require('mongoose');
 const employeeSchema = new mongoose.Schema({
   name: { type: String, required: true },
   role: { type: String, required: true },
-  projects: [
-    {
-      project: { type: mongoose.Schema.Types.ObjectId, ref: 'Project' },
-      percentage: { type: Number, required: true },
-    },
-  ],
   vacations: [
     {
       start_date: { type: Date, required: true },
