# backend/src/infrastructure/web/routes/projectRoutes.js
@@ -3,6 +3,16 @@ const router = express.Router();
 
 const projectService = require('../../../services/projectService');
 
+// Nova rota para listar projetos com detalhes (grupos e período de férias)
+router.get('/projects-with-details', async (req, res) => {
+  try {
+    const projectsWithDetails = await projectService.getProjectsWithDetails();
+    res.status(200).json(projectsWithDetails);
+  } catch (error) {
+    res.status(500).json({ error: error.message });
+  }
+});
+
 // Rota para criar um novo projeto
 router.post('/', async (req, res) => {
   try {
@@ -65,14 +75,6 @@ router.delete('/:id', async (req, res) => {
   }
 });
 
-// Nova rota para listar projetos com detalhes (grupos e período de férias)
-router.get('/projects-with-details', async (req, res) => {
-  try {
-    const projectsWithDetails = await projectService.getProjectsWithDetails();
-    res.status(200).json(projectsWithDetails);
-  } catch (error) {
-    res.status(500).json({ error: error.message });
-  }
-});
+
 
 module.exports = router;
